# llm-task-enforcer

./: .gitignore  HUMAN_VALIDATION_GUIDE.md  INTEGRATION_GUIDE.md  LICENSE  README.md  WORK_LOG_TEMPLATE.md  demo_enforcement.py  install.sh  install_supermanus.py  llm_guard.py  pyproject.toml  requirements-dev.txt  requirements.txt  task_enforcer.py  validate_installation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  supermanus-validation.yml
docs/: api.md  human-review.md  installation.md  integrations.md
example_project/: README.md  package.json
example_project/src/: demo_with_enforcement.js
integrations/: __init__.py  claude_code_integration.py  cursor_integration.py  github_copilot_integration.py
supermanus/: __init__.py
supermanus/analytics/: __init__.py  metrics.py  monitoring.py  reporting.py
tests/: __init__.py  test_runner.py
tests/fixtures/: test_data.json
tests/integration/: __init__.py  test_ai_integrations.py  test_integration_full_workflow.py
tests/unit/: __init__.py  test_llm_guard.py  test_task_enforcer.py
